# rust-template

./: .gitignore  .tarpaulin.toml  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
script/: bootstrap  build  env  install-zig  lint  release  server  test  update
src/: lib.rs  main.rs
tests/: math_tests.rs  mod.rs
tests/lib/: math_tests.rs
