[package]
name = "rust-template"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

authors = ["Grant Birkinbine"]
license = "MIT"
description = "A Rust repository template"
readme = "README.md"
repository = "https://github.com/GrantBirki/rust-template"

keywords = ["rust", "template"]
categories = ["template"]

[dependencies]
clap = { version = "=4.5.4", features = ["derive"] }
clap_complete = "=4.5.2"
clap_mangen = "=0.2.20"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
